--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -4,7 +4,7 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/ewvbonxi/public_html/
     - /bin/cp -R .vscode $DEPLOYPATH
-    - /bin/cp -R assets $DEPLOYPATH
+    - /bin/cp -R out/assets $DEPLOYPATH
     - /bin/cp -R css $DEPLOYPATH
     - /bin/cp -R fonts $DEPLOYPATH
     - /bin/cp -R img $DEPLOYPATH
