--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,15 +2,11 @@
 ---
 deployment:
   tasks:
-    - echo "@@@@@@@2@@@@@@@@"
     - export DEPLOYPATH=/home/ewvbonxi/public_html/
     - /bin/cp -R .vscode $DEPLOYPATH
-    - /bin/cp -R out/assets $DEPLOYPATH
+    - /bin/cp -R assets $DEPLOYPATH
     - /bin/cp -R css $DEPLOYPATH
     - /bin/cp -R fonts $DEPLOYPATH
     - /bin/cp -R img $DEPLOYPATH
     - /bin/cp -R js $DEPLOYPATH
     /bin/cp index.html $DEPLOYPATH
-    echo "*******1*******"
-    echo $(pwd)
-    echo "$(pwd)"
